# studash

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
app/: main.py
app/db/: __init__.py
app/routes/: student_routes.py
app/services/: student_service.py
app/templates/: base.html  detail.html  edit.html  index.html
