[project]
name = "studash"
version = "0.1.0"
description = "Songyeon's Student Dashboard"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "jinja2>=3.1.6",
    "paramiko>=4.0.0",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.27",
    "requests>=2.33.1",
    "sshtunnel>=0.4.0",
    "uvicorn>=0.46.0",
]
